examples/bad/non-bool-if-condition.elina
fn main(): void {
  if ("Hello") {
    return;
  }
}